--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,19 @@
 name: Print name
-on:
+on: 
   workflow_dispatch:
     inputs:
       NAME:
-        description: 'Name of print'
-        required: true
+        description: 'Name to print'     
+        required: true 
         type: string
 
 jobs:
   print-name:
-    name: print name
+    name: Print name
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Print name
       uses: ./
       with:
-        NAME: ${{ inputs.NAME }}
+        NAME: ${{ inputs.NAME }
